# dsml_survey_20

./: .gitignore  README.md  pyproject.toml  questions_summary.md  requirements.txt
data/: ecb_usd_euro_avg_exch_rate_filtered.csv  eurostat_EARN_NT_NET.xlsx  eurostat_gross_earnings_euros_2019_filtered.csv  ilo_mean_monthly_earnings_data.csv  ilo_mean_nom_wage_usd.csv  numbeo.csv  oecd_ann_avg_wage_2019.csv  wb_country_income_groups.csv  wb_gdp_pc_filtered.csv  wb_gni_pc_atlas.csv  wb_gni_pc_atlas_filtered.csv
kagglelib/: __init__.py  kaggle.py  paths.py  plots.py  third_party.py  utils.py
notebooks/: Data_overview_age.ipynb  Original_vs_Filtered.ipynb  Panos.ipynb  To_submit.ipynb  explore_invalid.ipynb  spam-identification-and-data-scientists-profile.ipynb  submit_draft.ipynb
story/: questions_summary.md  report_text.md
