[tool.poetry]
name = "dsml_survey_20"
version = "0.1.0"
description = ""
authors = ["thanarg1979 <thanarg1979@yahoo.gr>", "pmav99 <pmav99@gmail.com>"]
packages= [
    { include = "kagglelib" },
]

[tool.poetry.dependencies]
python = "^3.7"
pip = "*"
setuptools = "*"
pandas = "^1.1.5"
jupyterlab = "^2.2.9"
numpy = "^1.19.4"
matplotlib = "^3.3.3"
seaborn = "^0.11.0"
ipympl = "^0.5.8"
statsmodels = "^0.12.1"
data-science-types = "^0.2.22"
natsort = "^7.1.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
mypy = "^0.790"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
target-version = ['py38']
